--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div id="menu-auth-message" style="color:red; font-size:0.8rem; margin-top:0.5rem;"></div>
     </div>
     <hr>
-    <a href="Urlaubskalender alle Accounts_1749581438705.html" class="menu-item">
+    <a href="https://urlaubskalender.github.io/Elite/" class="menu-item">
       <i class="fas fa-calendar-alt"></i> Zurück zum Urlaubskalender
     </a>
     <button class="menu-item" onclick="showArchived = !showArchived; filterTodos()">
